--- a/campus-program.html
+++ b/campus-program.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>GitHub Campus Program | VIET</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="assets/icons/favicon.ico" />
 
     <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
