--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VIET Tech Initiative Presentations</title>
+    <title>VIET Initiatives</title>
+    <link rel="icon" href="assets/icons/favicon.ico" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
