--- a/youtube_proposal_doc.html
+++ b/youtube_proposal_doc.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Presenter Helper Notes | YouTube Channel Initiative</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="assets/icons/favicon.ico" />
     <style>
       :root {
         color-scheme: light;
