--- a/index.html
+++ b/index.html
@@ -376,14 +376,14 @@
 
       <!-- Footer Info -->
       <div class="mt-16 text-center text-gray-500">
-        <p class="mb-2">
+        <!-- <p class="mb-2">
           <i class="fas fa-envelope mr-2"></i>
           Contact: cse@viet.edu.in
         </p>
         <p class="text-sm">
           © 2026 Visakha Institute of Engineering and Technology - All Rights
           Reserved
-        </p>
+        </p> -->
       </div>
     </main>
 
