included internal learning portal presentation

--- a/index.html
+++ b/index.html
@@ -194,6 +194,38 @@
           </div>
         </a>
 
+        <!-- Internal Learning Portal - Active -->
+        <a
+          href="./internal-learning.html"
+          class="card p-8 rounded-2xl border border-gray-700 hover:border-green-500 block"
+        >
+          <div class="flex items-start justify-between mb-6">
+            <div class="card-icon text-5xl">
+              <i class="fa-solid fa-graduation-cap"></i>
+            </div>
+            <span
+              class="status-badge text-xs px-3 py-1 rounded-full text-white font-semibold"
+              style="
+                background: linear-gradient(135deg, #00ff00 0%, #00cc00 100%);
+                box-shadow: 0 0 20px rgba(0, 255, 0, 0.3);
+              "
+            >
+              Ready
+            </span>
+          </div>
+          <h3 class="text-2xl font-bold mb-3 text-white">
+            Internal Learning Portal
+          </h3>
+          <p class="text-gray-400 mb-4 leading-relaxed">
+            Internal Learning portal where the students/faculty can enroll for
+            the topic and can complete the Learning
+          </p>
+          <div class="flex items-center text-green-400 font-semibold">
+            <span>View Presentation</span>
+            <i class="fas fa-arrow-right ml-2"></i>
+          </div>
+        </a>
+
         <!-- NPM Organization - Coming Soon -->
         <div
           class="card p-8 rounded-2xl border border-gray-700 opacity-60 pointer-events-none"
