--- a/youtube-channel.html
+++ b/youtube-channel.html
@@ -126,11 +126,13 @@
           class="relative z-10 w-full px-16 py-8 flex justify-between items-center border-b border-gray-800 bg-[#0d1117]/80 backdrop-blur-sm"
         >
           <div class="flex items-center space-x-4">
-            <img
-              src="https://viet.edu.in/img/footer-imgs/viet-logo.png"
-              alt="VIET Logo"
-              class="h-12 w-12 rounded-full p-1"
-            />
+            <a href="/">
+              <img
+                src="https://viet.edu.in/img/footer-imgs/viet-logo.png"
+                alt="VIET Logo"
+                class="h-12 w-12 rounded-full p-1"
+              />
+            </a>
             <div>
               <h1 class="text-white font-bold text-2xl">
                 Official College YouTube Channel
