--- a/campus-program.html
+++ b/campus-program.html
@@ -299,11 +299,13 @@
           class="relative z-10 w-full p-8 flex justify-between items-center border-b border-gray-800 bg-[#0d1117]/80 backdrop-blur-sm"
         >
           <div class="flex items-center space-x-4">
-            <img
-              src="https://viet.edu.in/img/footer-imgs/viet-logo.png"
-              alt="VIET Logo"
-              class="h-12 w-12 rounded-full p-1"
-            />
+            <a href="/">
+              <img
+                src="https://viet.edu.in/img/footer-imgs/viet-logo.png"
+                alt="VIET Logo"
+                class="h-12 w-12 rounded-full p-1"
+              />
+            </a>
             <span class="text-2xl font-bold text-gray-400">+</span>
             <i class="fab fa-github text-4xl text-white"></i>
           </div>
