--- a/index.html
+++ b/index.html
@@ -287,6 +287,39 @@
           </div>
         </a>
 
+        <!-- Mechanical to Tech Journey - Active -->
+        <a
+          href="./mech-meet-up.html"
+          class="card p-8 rounded-2xl border border-gray-700 hover:border-purple-500 block"
+        >
+          <div class="flex items-start justify-between mb-6">
+            <div class="card-icon text-5xl">
+              <i class="fas fa-rocket text-white"></i>
+            </div>
+            <span
+              class="status-badge text-xs px-3 py-1 rounded-full text-white font-semibold"
+              style="
+                background: linear-gradient(135deg, #a855f7 0%, #9333ea 100%);
+                box-shadow: 0 0 20px rgba(168, 85, 247, 0.3);
+              "
+            >
+              Ready
+            </span>
+          </div>
+          <h3 class="text-2xl font-bold mb-3 text-white">
+            Mechanical to Tech Journey
+          </h3>
+          <p class="text-gray-400 mb-4 leading-relaxed">
+            Inspiring presentation for mechanical engineering students on career
+            transition to technology roles, featuring real success stories and
+            actionable roadmap.
+          </p>
+          <div class="flex items-center text-purple-400 font-semibold">
+            <span>View Presentation</span>
+            <i class="fas fa-arrow-right ml-2"></i>
+          </div>
+        </a>
+
         <!-- Internal Learning Portal - Active -->
         <a
           href="./internal-learning.html"
